fix password issues
the password fields were not showing up when an admin needs to create
 a user.  This issue was created from trying to promote code reuse
 amongst templates and js and css.

 Issue #74

--- a/metridoc-grails-core/web-app/css/changePassword.css
+++ b/metridoc-grails-core/web-app/css/changePassword.css
@@ -12,11 +12,6 @@
   *	or implied. See the License for the specific language governing
   *	permissions and limitations under the License.  */
 
-
-.password{
-    display: none;
-}
-
 #shiroRoles {
     padding-top: 5px;
 }
